<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="71dp">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="90dp"
                android:layout_height="54dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_image" />

            <Button
                android:id="@+id/home_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="5dp"
                android:text="HOME"
                app:layout_constraintEnd_toStartOf="@+id/details_button"
                app:layout_constraintStart_toEndOf="@+id/logo_image"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/details_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:enabled="false"
                android:text="DETAILS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/home_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/game_title_text_view"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_height="33dp" />

        <ImageView
            android:id="@+id/cover_imageview"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/picture1"
            app:cardCornerRadius="20dp" />
        />

        <TextView
            android:id="@+id/platform_textview"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/esrb_rating_textview"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/developer_textview"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/publisher_textview"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/genre_textview"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/impression_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
