<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="homeItem" type="id" />
    <item name="gameDetailsItem" type="id" />
</resources>